--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Stackbit Podcaster Theme",
     "path_prefix": "/",
     "layout_type": "boxed",
-    "style": "minimal",
+    "style": "classic",
     "palette": "green",
     "mode": "dark",
     "base_font": "sans-serif",
