--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "path_prefix": "/",
     "layout_type": "boxed",
     "style": "classic",
-    "palette": "green",
+    "palette": "blue",
     "mode": "dark",
     "base_font": "sans-serif",
     "header": {
