--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "style": "classic",
     "palette": "gray",
     "mode": "dark",
-    "base_font": "sans-serif",
+    "base_font": "serif",
     "header": {
         "title": "Podcaster",
         "logo": "images/logo.svg",
